--- a/indexStyle.css
+++ b/indexStyle.css
@@ -2,22 +2,17 @@ body
 {
     overflow-y:hidden;
     overflow-x:hidden;
-    background:black;
-    padding:0;
-    margin:0;
     font-family: "Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif;
 }
 #contentPage
 {
     overflow-x:hidden;
-    margin:0;
-    padding:0;
     overflow-y:scroll;
     width:100vw;
     height:90vh;
-    top:0vh;
-    margin-top:10vh;
+    top:0;
     left:0;
+    margin-top:10vh;
     padding-right:11vw;
     position:fixed;
 }
@@ -105,7 +100,6 @@ body
 {
     position:absolute;
     width:100vw;
-    height:100vh;
     left:0;
     text-align: center;
     z-index:1;
@@ -256,6 +250,7 @@ a
 #home
 {
     position:fixed;
+    height:100vh;
     top:0vh;
     z-index:0;
     background-color:rgb(20,156,228);
@@ -292,7 +287,6 @@ a
 {
     position:relative;
     top:0vh;
-    height:30px;
     width:100vw;
     text-align: center;
     left:0;
@@ -332,6 +326,7 @@ h1, span
 .btnLink:hover
 {
     background:rgb(20,156,228);
+    box-shadow:none;
 }
 #picContainer
 {
@@ -396,7 +391,6 @@ h1, span
 {
     color:rgba(235,70,30,1);
     font-weight:bold;
-    /*text-shadow:1px 1px 1px rgba(235,70,30,0.6);*/
 }
 .subtitle
 {
@@ -404,7 +398,6 @@ h1, span
     line-height:4.3vmin;
     color:rgb(65,64,66);
     font-weight:normal;
-    /*text-shadow:0.5px 0.5px 1px rgba(35,34,36,0.5);*/
 }
 .bigSubtitle
 {
@@ -456,8 +449,9 @@ h1, span
 {
     text-align:justify;
     font-size:14pt;
-    line-height:16pt;
+    line-height:19pt;
     font-weight:normal;
+
 }
 #aboutInfo
 {
@@ -467,7 +461,7 @@ h1, span
     margin:0 0 0 4%;
     padding:3% 3%;
     width:40%;
-    height:94%;
+    height:auto;
 }
 #schoolLabel
 {
@@ -477,8 +471,8 @@ h1, span
 .educationIcon
 {
     display:inline-block;
-    height:35pt;
-    width:35pt;
+    height:40pt;
+    width:40pt;
     margin-right:10px;
     float:left;
     background:url(graphics/eduIcon.svg);
@@ -489,10 +483,9 @@ h1, span
     display:inline-block;
     vertical-align: top;
     top:0;
-    margin:0 0 0 0%;
+    margin:0;
     padding:3% 6.5%;
     width:32%;
-    height:94%;
 }
 #skillsLabel
 {
@@ -589,19 +582,20 @@ h1, span
 }
 #miscSkillsLabel
 {
-    margin-top:0;
+    margin-top:5%;
+    margin-bottom:0;
 }
 .miscSkills
 {
     display:inline-block;
     width:100%;
-    margin-top:-5%;
-    cursor:default;50
+    cursor:default;
 }
 .miscSkills span
 {
     display:inline-block;
     padding:2px 5px;
+    font-size:12pt;
     margin:2px 0;
     background:rgba(235,70,30,0.5);
     border:1px solid rgba(227,50,34,1);
@@ -949,7 +943,6 @@ h1, span
 .projTitle
 {
     display:inline-block;
-    /*font-size:16pt;*/
     font-size:1.75vw;
     font-weight:bold;
     margin:0;
@@ -960,7 +953,6 @@ h1, span
     vertical-align:top;
     margin-top:-1%;
     margin-bottom:0%;
-    /*font-size:10.5pt;*/
     font-size:1.15vw;
 }
 .projLang
@@ -1108,13 +1100,14 @@ h1, span
 }
 .verticalLine
 {
-    position:absolute;
+    position:relative;
+    display:inline-block;
     width:3px;
     background:rgba(65,64,66,0.6);
-    height:50%;
-    top:30%;
-    left:45%;
+    height:273px;
+    vertical-align: middle;
     border-radius:1.5px;
+    margin:0 3vw;
 }
 #socialForm
 {
@@ -1122,25 +1115,20 @@ h1, span
     display:inline-block;
     left:0;
     top:0;
-    width:40%;
-    height:70%;
-    padding:5% 0;
+    padding:0;
     text-align:center;
-}
-#socialForm .titleText
-{
-    padding:0 10%;
+    vertical-align: middle;
 }
 #contactForm
 {
     position:relative;
     display:inline-block;
-    vertical-align:top;
+    vertical-align:middle;
     left:0;
+    width:45vw;
     top:0;
-    width:40%;
-    height:80%;
-    padding:5% 0%;
+    padding:0;
+    margin:5% 0 3% 0;
 }
 #cForm
 {
@@ -1354,15 +1342,15 @@ input[type="submit"]:active
 }
 #socialIcons
 {
-    margin-top:15%;
+    margin-top:3%;
 }
 .socIconContainer
 {
     display:inline-block;
     text-align:left;
-    margin-top:-3%;
-    width:6vw;
-    height:6vw;
+    margin-top:-13px;
+    width:82px;
+    height:82px;
 }
 .socIcon
 {
@@ -1457,6 +1445,43 @@ input[type="submit"]:active
 
 @media only screen and (min-width: 1366px)
 {
+    .btnLink
+    {
+        padding:0.87vw 1.46vw;
+        font-size:1.3vw;
+        line-height:1.3vw;
+        border-radius:0.3vw;
+    }
+    #about .titleText, #projectsTitle, #contact .titleText
+    {
+        font-size:2vw;
+        line-height:2vw;
+    }
+    #about .titleText::after, #projectsTitle::after, #contact .titleText::after
+    {
+        height:0.25vw;
+        border-radius:0.13vw;
+    }
+    #aboutBg .subtitle
+    {
+        font-size:1.5vw;
+        line-height: 2vw;
+    }
+    .bigSubtitle
+    {
+        font-size:1.8vw;
+    }
+    .educationIcon
+    {
+        width:4vw;
+        height:4vw;
+    }
+    .miscSkills span
+    {
+        font-size:1.2vw;
+        padding:0.3vw 0.5vw;
+        margin:0.2vw 0.1vw;
+    }
     .project
     {
         width:25.2vw;
@@ -1465,5 +1490,41 @@ input[type="submit"]:active
         min-width:none;
         max-height:none;
         min-height:none;
+    }
+    .projectText
+    {
+        font-size:1.2vw;
+    }
+    .codeIcon, .demoIcon, .downloadIcon
+    {
+        width:2.2vw;
+        height:2.2vw;
+    }
+    .verticalLine
+    {
+        height:20vw;
+    }
+    .socIconContainer
+    {
+        width:6vw;
+        height:6vw;
+        margin-top:-0.96vw;
+    }
+    #contactForm
+    {
+        width:auto;
+    }
+    input[type="text"], textarea, .cLabel
+    {
+        font-size:1.2vw;
+    }
+    input[type="submit"]
+    {
+        font-size:1.4vw;
+    }
+    #credits
+    {
+        line-height:1.2vw;
+        font-size:1.2vw;
     }
 }
